--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js && exit 0",
     "test": "echo \"Error: no test specified\" && exit 1",
 	"lint": "eslint index.js",
 	"fix": "eslint index.js --fix"
